--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # ignore "excess" files and directories
-# in essence, ignore everything but *.xdk file and www and docs directories
+# in essence, ignore everything but *.xdk file and www, iodocs and docs directories
 /*
+!/iodocs
 !/www
 !/docs
 !/config.xml
